namespace quizzical
{
    public struct Tag
    {
        public string TagName {get;set;}
    }
}